--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -9,9 +9,12 @@
     <div>
         <h1><a href="">Django Girls Blog</a></h1>
     </div>
-    <div>
-        <p>published</p>
-        <h2><a href="">My first post</a></h2>
-    </div>
+    {% for post in posts %}
+        <div>
+            <p>published: {{ post.published_date}}</p>
+            <h1><a href="">{{ post.title }}</a></h1>
+            <p>{{ post.text|linebreaksbr }}</p>
+        </div>
+    {% endfor %}
 </body>
 </html>
