--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,20 +1,12 @@
-﻿<!DOCTYPE html>
-
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="utf-8" />
-    <title>Test</title>
-</head>
-<body>
-    <div>
-        <h1><a href="">Django Girls Blog</a></h1>
-    </div>
+﻿{% extends 'blog/base.html' %}
+{% block content %}
     {% for post in posts %}
-        <div>
-            <p>published: {{ post.published_date}}</p>
-            <h1><a href="">{{ post.title }}</a></h1>
-            <p>{{ post.text|linebreaksbr }}</p>
+    <div class="post">
+        <div class="date">
+            {{ post.published_date}}
         </div>
+        <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+        <p>{{ post.text|linebreaksbr }}</p>
+    </div>
     {% endfor %}
-</body>
-</html>
+{% endblock %}
